--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
     <link
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
       rel="stylesheet"
@@ -19,7 +20,21 @@
         continue.</strong
       >
     </noscript>
-    <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/vue-simple-spinner@1.2.8/dist/vue-simple-spinner.min.js"></script>
+
+    <div id="app">
+      <vue-simple-spinner></vue-simple-spinner>
+    </div>
     <!-- built files will be auto injected -->
+    <script>
+      import Vue from "vue";
+      import Spinner from "vue-simple-spinner";
+
+      new Vue({
+        components: {
+          Spinner,
+        },
+      });
+    </script>
   </body>
 </html>
